<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/bookText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/chapterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookText" />

    <EditText
        android:id="@+id/verseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chapterText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="117dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/enter_book"
        app:layout_constraintBaseline_toBaselineOf="@+id/bookText"
        app:layout_constraintEnd_toStartOf="@+id/bookText"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/enter_book" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="118dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/enter_chapter"
        app:layout_constraintBaseline_toBaselineOf="@+id/chapterText"
        app:layout_constraintEnd_toStartOf="@+id/chapterText"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/enter_chapter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="117dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/enter_verse"
        app:layout_constraintBaseline_toBaselineOf="@+id/verseText"
        app:layout_constraintEnd_toStartOf="@+id/verseText"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/enter_verse" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="344dp"
        android:layout_height="67dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/label_scripture"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/label_scripture" />

    <Button
        android:id="@+id/button"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendScripture"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verseText" />

    <Button
        android:id="@+id/button5"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="loadScripture"
        android:text="@string/load_scripture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>